bw needs an entire recode :skull: